--- a/template/header.html
+++ b/template/header.html
@@ -1,5 +1,22 @@
-<header>
-  <a href="http://projet1.dev/"><h2 class="quizz_japon">Quiz Jap<span class="red_o">o</span>n</h2></a>
+<header class="flex-container">
   <h1>Germain Pinganaud<br>
   Web Dev</h1>
+    <ul>
+      <li><a href="#">
+        <img id="fr" class="logo-lang" src="graphic/france.png" alt="html">
+        <label for="fr">Français</label>
+      </li></a>
+      <li><a href="#">
+        <img id="en" class="logo-lang" src="graphic/english.png" alt="html">
+        <label for="en">English</label>
+      </li></a>
+      <li><a href="#">
+        <img id="jp" class="logo-lang" src="graphic/japan.png" alt="html">
+        <label for="jp">日本語</label>
+      </li></a>
+      <li><a href="#">
+        <img id="cn" class="logo-lang" src="graphic/china.png" alt="html">
+        <label for="cn">中文</label>
+      </li></a>
+    </ul>
 </header>
