--- a/template/header.html
+++ b/template/header.html
@@ -19,4 +19,12 @@
         <label for="cn">中文</label>
       </li></a>
     </ul>
+    <div class="">
+      <ul>
+        <a href="https://www.facebook.com/john.spartaksound" target="_blank"><li class="iconCustom">f</li></a>
+        <a href="https://www.linkedin.com/in/germain-pinganaud-610445115/" target="_blank"><li class="iconCustom">in</li></a>
+        <a href="mailto:contact@germainpinganaud.fr"><li class="iconCustom">@</li></a>
+      </ul>
+
+    </div>
 </header>
