--- a/template/profilCn.html
+++ b/template/profilCn.html
@@ -14,6 +14,6 @@
     <p>艺术家，游历世界者在重新寻找职业的路上，我废寝忘食、呕心沥血的学习着编程。我首先在Codecademy上自学了HTML5和CSS3语言，随后，我开始了在IT-Akademy职业培训--网站制作和手机编程，这让我在这两个编程语言上有了更多的进步，并让我开始学习更多的编程语言：bash、 javascript、jQuery、AJAX、PhP、GIT、mySQL、UX、responsive、mobile first。</p>
   </div>
   <div class="half-size min-size-s flex-container">
-    <img class="image-size image-rounded" src="graphic/hachiko.jpg" alt="Une image">
+    <img class="image-size image-rounded" src="graphic/japan01.jpg" alt="Une image">
   </div>
 </section>
