--- a/template/profilEn.html
+++ b/template/profilEn.html
@@ -14,6 +14,6 @@
     <p>Artist, globetrotter in retraining, I am dedicated to web development. I learned the HTML5 and CSS3 on Codecademy basics before starting the web developpment course in IT-Akademy. From then, I'm studying those 2 languages on a more advanced level and discover bash, javascript, jQuery, AJAX, PhP, GIT, mySQL, UX, responsive, mobile first and other concepts.</p>
   </div>
   <div class="half-size min-size-s flex-container">
-    <img class="image-size image-rounded" src="graphic/hachiko.jpg" alt="Une image">
+    <img class="image-size image-rounded" src="graphic/japan01.jpg" alt="Une image">
   </div>
 </section>
