--- a/template/profilJp.html
+++ b/template/profilJp.html
@@ -14,6 +14,6 @@
     <p>芸術家、再訓練の世界者でおり、Webプログラミングを一生懸命勉強します。IT-Akademyのデベロッパーウェブと携帯技術を入学する前にCodecademy.comでHTML5とCSS3の基本を習いましたがそこから上級復習、そしてbash, javascript, jQuery, AJAX, PhP, GIT, mySQL, UX, responsive, mobile firstも発見しました。</p>
   </div>
   <div class="half-size min-size-s flex-container">
-    <img class="image-size image-rounded" src="graphic/hachiko.jpg" alt="Une image">
+    <img class="image-size image-rounded" src="graphic/japan01.jpg" alt="Une image">
   </div>
 </section>
