--- a/template/header.html
+++ b/template/header.html
@@ -2,19 +2,19 @@
   <h1>Germain Pinganaud<br>
   Web Dev</h1>
     <ul>
-      <li><a href="#">
+      <li><a href="/locale.php?value=fr">
         <img id="fr" class="logo-lang" src="graphic/france.png" alt="html">
         <label for="fr">Français</label>
       </li></a>
-      <li><a href="#">
+      <li><a href="/locale.php?value=en">
         <img id="en" class="logo-lang" src="graphic/english.png" alt="html">
         <label for="en">English</label>
       </li></a>
-      <li><a href="#">
+      <li><a href="/locale.php?value=jp">
         <img id="jp" class="logo-lang" src="graphic/japan.png" alt="html">
         <label for="jp">日本語</label>
       </li></a>
-      <li><a href="#">
+      <li><a href="/locale.php?value=cn">
         <img id="cn" class="logo-lang" src="graphic/china.png" alt="html">
         <label for="cn">中文</label>
       </li></a>
