--- a/template/head.html
+++ b/template/head.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Germain Pinganaud</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Special+Elite|Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="graphic/letter-g.png">
 </head>
