--- a/template/menu.html
+++ b/template/menu.html
@@ -1,4 +1,4 @@
-<header class="flex-container, flex-wrap, hidden">
+<header class="flex-container, flex-wrap, menu, hidden">
   <div>
   <h1>Germain Pinganaud<br>
   Web Dev</h1>
