--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,14 @@ h2 {
 li {
   list-style: none;
 }
+.menu-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 25%;
+  justify-content: flex-end;
+  background-image: url("../graphic/tweed.png");
+  box-shadow: 2px 2px 4px black;
+}
 .iconCustom {
   width: 50px;
   height: 50px;
