bouton et menu opérationnels

--- a/template/menu.html
+++ b/template/menu.html
@@ -1,4 +1,4 @@
-<header class="flex-container, flex-wrap, menu, hidden">
+<header id="menu-bar" class="flex-container flex-wrap menu hidden">
   <div>
   <h1>Germain Pinganaud<br>
   Web Dev</h1>
@@ -23,9 +23,18 @@
   </ul>
   <div>
     <ul class="flex-row">
-      <a href="https://www.facebook.com/john.spartaksound" target="_blank"><li class="iconCustom">f</li></a>
-      <a href="https://www.linkedin.com/in/germain-pinganaud-610445115/" target="_blank"><li class="iconCustom">in</li></a>
-      <a href="mailto:contact@germainpinganaud.fr"><li class="iconCustom">@</li></a>
+
+      <a href="https://www.facebook.com/john.spartaksound" target="_blank">
+        <i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i>
+      </a>
+
+      <a href="https://www.linkedin.com/in/germain-pinganaud-610445115/" target="_blank">
+        <i class="fa fa-linkedin fa-5x" aria-hidden="true"></i>
+      </a>
+
+      <a href="mailto:contact@germainpinganaud.fr">
+        <i class="fa fa-envelope fa-5x" aria-hidden="true"></i>
+      </a>
     </ul>
   </div>
 </header>
