--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h2 {
                     MENUS
 ---------------------------------------------*/
 .hidden{
-  display: none;
+  display: none !important;
 }
 li {
   list-style: none;
@@ -54,15 +54,16 @@ li {
   border-radius: 25%;
   justify-content: flex-end;
   background-image: url("../graphic/tweed.png");
+  color: white;
   box-shadow: 2px 2px 4px black;
 }
-.iconCustom {
+.iconCstom {
   width: 50px;
   height: 50px;
   border-radius: 25%;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   background-image: url("../graphic/tweed.png");
   font-family: 'Special Elite';
   font-size: 35px;
@@ -86,8 +87,7 @@ small {
   justify-content: center;
 }
 section {
-  padding-top: 200px;
-  height: 600px;
+  padding-top: 20px;
 }
 .header-img {
   display: flex;
@@ -146,7 +146,7 @@ section {
 .half-height {
   height: 50%;
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
   h1 {
     font-size: 30px;
   }
@@ -160,5 +160,16 @@ section {
 
   .half-size {
     width: 100%;
+  }
+  p {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 400px) {
+  h1 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 14px;
   }
 }
