--- a/template/foot.html
+++ b/template/foot.html
@@ -1,4 +1,6 @@
     <small>Copyright 2017 Germain Pinganaud</small>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="/js/script.js"></script>
 </body>
 </html>
