--- a/template/header.html
+++ b/template/header.html
@@ -1,7 +1,9 @@
-<header class="flex-container, flex-wrap">
+<section id="title" class="flex-container flex-wrap">
   <div>
-  <h1>Germain Pinganaud<br>
-  Web Dev</h1>
-  <button type="button" id="menu-button" class="menu-button" name="menu-button"></button>
+    <h1>Germain Pinganaud<br>
+    Web Dev</h1>
   </div>
-</header>
+  <button type="button" id="menu-button" class="menu-button" name="menu-button">
+    <i class="fa fa-bars fa-4x" aria-hidden="true"></i>
+  </button>
+</section>
