--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,6 @@
 body {
   margin: inherit;
 }
-.menu {
-  width: 100%;
-  position: fixed;
-  background-image: url("../graphic/dark_wall.png");
-  margin-bottom: 100px;
-}
 label {
   margin-left: 10px;
 }
@@ -45,30 +39,26 @@ h2 {
 .hidden{
   display: none !important;
 }
+.menu {
+  width: 100%;
+  position: fixed;
+  background-image: url("../graphic/dark_wall.png");
+  margin-bottom: 100px;
+}
 li {
   list-style: none;
 }
 .menu-button {
+  position: fixed;
+  right: 10px;
+  top: 10px;
   width: 50px;
   height: 50px;
+  border-width: 2px;
+  padding: 7px 9px;
   border-radius: 25%;
-  justify-content: flex-end;
   background-image: url("../graphic/tweed.png");
   color: white;
-  box-shadow: 2px 2px 4px black;
-}
-.iconCstom {
-  width: 50px;
-  height: 50px;
-  border-radius: 25%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url("../graphic/tweed.png");
-  font-family: 'Special Elite';
-  font-size: 35px;
-  margin-bottom: 10px;
-  text-shadow: 2px 2px 4px black;
   box-shadow: 2px 2px 4px black;
 }
 .flex-row {
@@ -82,10 +72,9 @@ li {
     box-shadow: 1px 1px 2px white;
   }
 }
-small {
-  display: flex;
-  justify-content: center;
-}
+/*---------------------------------------------
+                    SECTION
+---------------------------------------------*/
 section {
   padding-top: 20px;
 }
@@ -146,6 +135,18 @@ section {
 .half-height {
   height: 50%;
 }
+/*---------------------------------------------
+                    FOOTER
+---------------------------------------------*/
+small {
+  display: flex;
+  justify-content: center;
+}
+
+/*---------------------------------------------
+                MEDIA QUERIES
+---------------------------------------------*/
+
 @media screen and (max-width: 1200px) {
   h1 {
     font-size: 30px;
@@ -164,12 +165,20 @@ section {
   p {
     font-size: 16px;
   }
+  /*  liste des langues décalée  */
+  .nearButton {
+    margin-right: 100px;
+  }
 }
 @media screen and (max-width: 400px) {
   h1 {
-    font-size: 20px;
+    font-size: 25px;
   }
   p {
     font-size: 14px;
+  }
+  /*  liste des langues décalée du bouton menu */
+  .nearButton {
+    margin-right: 50px;
   }
 }
