--- a/template/menu.html
+++ b/template/menu.html
@@ -3,7 +3,7 @@
   <h1>Germain Pinganaud<br>
   Web Dev</h1>
   </div>
-  <ul class="flex-row">
+  <ul class="flex-row nearButton">
     <li><a href="/locale.php?value=fr">
       <img id="fr" class="logo-lang" src="graphic/france.png" alt="html">
       <label for="fr"></label>
@@ -22,18 +22,18 @@
     </li></a>
   </ul>
   <div>
-    <ul class="flex-row">
+    <ul class="flex-row nearButton">
 
       <a href="https://www.facebook.com/john.spartaksound" target="_blank">
-        <i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i>
+        <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
       </a>
 
       <a href="https://www.linkedin.com/in/germain-pinganaud-610445115/" target="_blank">
-        <i class="fa fa-linkedin fa-5x" aria-hidden="true"></i>
+        <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
       </a>
 
       <a href="mailto:contact@germainpinganaud.fr">
-        <i class="fa fa-envelope fa-5x" aria-hidden="true"></i>
+        <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
       </a>
     </ul>
   </div>
