le bouton ne cache plus le titre

--- a/template/header.html
+++ b/template/header.html
@@ -1,5 +1,5 @@
 <section id="title" class="flex-container flex-wrap">
-  <div>
+  <div class="nearButton">
     <h1>Germain Pinganaud<br>
     Web Dev</h1>
   </div>
