--- a/template/menu.html
+++ b/template/menu.html
@@ -1,5 +1,5 @@
 <header id="menu-bar" class="flex-container flex-wrap menu hidden">
-  <div>
+  <div class="nearButton">
   <h1>Germain Pinganaud<br>
   Web Dev</h1>
   </div>
